APIs/googleapis.com/adexchangebuyer/v1.2/javascript-client/README.md
# ad_exchange_buyer_api

AdExchangeBuyerApi - JavaScript client for ad_exchange_buyer_api
Accesses your bidding-account information, submits creatives for validation, finds available direct deals, and retrieves performance reports.
This SDK is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: v1.2
- Package version: v1.2
- Generator version: 7.9.0
- Build package: org.openapitools.codegen.languages.JavascriptClientCodegen
For more information, please visit [https://google.com](https://google.com)

## Installation

### For [Node.js](https://nodejs.org/)

#### npm

To publish the library as a [npm](https://www.npmjs.com/), please follow the procedure in ["Publishing npm packages"](https://docs.npmjs.com/getting-started/publishing-npm-packages).

Then install it via:

```shell
npm install ad_exchange_buyer_api --save
```

Finally, you need to build the module:

```shell
npm run build
```

##### Local development

To use the library locally without publishing to a remote npm registry, first install the dependencies by changing into the directory containing `package.json` (and this README). Let's call this `JAVASCRIPT_CLIENT_DIR`. Then run:

```shell
npm install
```

Next, [link](https://docs.npmjs.com/cli/link) it globally in npm with the following, also from `JAVASCRIPT_CLIENT_DIR`:

```shell
npm link
```

To use the link you just defined in your project, switch to the directory you want to use your ad_exchange_buyer_api from, and run:

```shell
npm link /path/to/<JAVASCRIPT_CLIENT_DIR>
```

Finally, you need to build the module:

```shell
npm run build
```

#### git

If the library is hosted at a git repository, e.g.https://github.com/GIT_USER_ID/GIT_REPO_ID
then install it via:

```shell
    npm install GIT_USER_ID/GIT_REPO_ID --save
```

### For browser

The library also works in the browser environment via npm and [browserify](http://browserify.org/). After following
the above steps with Node.js and installing browserify with `npm install -g browserify`,
perform the following (assuming *main.js* is your entry file):

```shell
browserify main.js > bundle.js
```

Then include *bundle.js* in the HTML pages.

### Webpack Configuration

Using Webpack you may encounter the following error: "Module not found: Error:
Cannot resolve module", most certainly you should disable AMD loader. Add/merge
the following section to your webpack config:

```javascript
module: {
  rules: [
    {
      parser: {
        amd: false
      }
    }
  ]
}
```

## Getting Started

Please follow the [installation](#installation) instruction and execute the following JS code:

```javascript
var AdExchangeBuyerApi = require('ad_exchange_buyer_api');

var defaultClient = AdExchangeBuyerApi.ApiClient.instance;
// Configure OAuth2 access token for authorization: Oauth2c
var Oauth2c = defaultClient.authentications['Oauth2c'];
Oauth2c.accessToken = "YOUR ACCESS TOKEN"
// Configure OAuth2 access token for authorization: Oauth2
var Oauth2 = defaultClient.authentications['Oauth2'];
Oauth2.accessToken = "YOUR ACCESS TOKEN"

var api = new AdExchangeBuyerApi.AccountsApi()
var id = 56; // {Number} The account id
var opts = {
  'alt': "alt_example", // {String} Data format for the response.
  'fields': "fields_example", // {String} Selector specifying which fields to include in a partial response.
  'key': "key_example", // {String} API key. Your API key identifies your project and provides you with API access, quota, and reports. Required unless you provide an OAuth 2.0 token.
  'oauthToken': "oauthToken_example", // {String} OAuth 2.0 token for the current user.
  'prettyPrint': true, // {Boolean} Returns response with indentations and line breaks.
  'quotaUser': "quotaUser_example", // {String} An opaque string that represents a user for quota purposes. Must not exceed 40 characters.
  'userIp': "userIp_example" // {String} Deprecated. Please use quotaUser instead.
};
var callback = function(error, data, response) {
  if (error) {
    console.error(error);
  } else {
    console.log('API called successfully. Returned data: ' + data);
  }
};
api.adexchangebuyerAccountsGet(id, opts, callback);

```

## Documentation for API Endpoints

All URIs are relative to *https://www.googleapis.com/adexchangebuyer/v1.2*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*AdExchangeBuyerApi.AccountsApi* | [**adexchangebuyerAccountsGet**](docs/AccountsApi.md#adexchangebuyerAccountsGet) | **GET** /accounts/{id} | 
*AdExchangeBuyerApi.AccountsApi* | [**adexchangebuyerAccountsList**](docs/AccountsApi.md#adexchangebuyerAccountsList) | **GET** /accounts | 
*AdExchangeBuyerApi.AccountsApi* | [**adexchangebuyerAccountsPatch**](docs/AccountsApi.md#adexchangebuyerAccountsPatch) | **PATCH** /accounts/{id} | 
*AdExchangeBuyerApi.AccountsApi* | [**adexchangebuyerAccountsUpdate**](docs/AccountsApi.md#adexchangebuyerAccountsUpdate) | **PUT** /accounts/{id} | 
*AdExchangeBuyerApi.CreativesApi* | [**adexchangebuyerCreativesGet**](docs/CreativesApi.md#adexchangebuyerCreativesGet) | **GET** /creatives/{accountId}/{buyerCreativeId} | 
*AdExchangeBuyerApi.CreativesApi* | [**adexchangebuyerCreativesInsert**](docs/CreativesApi.md#adexchangebuyerCreativesInsert) | **POST** /creatives | 
*AdExchangeBuyerApi.CreativesApi* | [**adexchangebuyerCreativesList**](docs/CreativesApi.md#adexchangebuyerCreativesList) | **GET** /creatives | 


## Documentation for Models

 - [AdExchangeBuyerApi.Account](docs/Account.md)
 - [AdExchangeBuyerApi.AccountBidderLocationInner](docs/AccountBidderLocationInner.md)
 - [AdExchangeBuyerApi.AccountsList](docs/AccountsList.md)
 - [AdExchangeBuyerApi.Creative](docs/Creative.md)
 - [AdExchangeBuyerApi.CreativeCorrectionsInner](docs/CreativeCorrectionsInner.md)
 - [AdExchangeBuyerApi.CreativeDisapprovalReasonsInner](docs/CreativeDisapprovalReasonsInner.md)
 - [AdExchangeBuyerApi.CreativeFilteringReasons](docs/CreativeFilteringReasons.md)
 - [AdExchangeBuyerApi.CreativeFilteringReasonsReasonsInner](docs/CreativeFilteringReasonsReasonsInner.md)
 - [AdExchangeBuyerApi.CreativesList](docs/CreativesList.md)


## Documentation for Authorization


Authentication schemes defined for the API:
### Oauth2


- **Type**: OAuth
- **Flow**: implicit
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/adexchange.buyer: Manage your Ad Exchange buyer account configuration

### Oauth2c


- **Type**: OAuth
- **Flow**: accessCode
- **Authorization URL**: https://accounts.google.com/o/oauth2/auth
- **Scopes**: 
  - https://www.googleapis.com/auth/adexchange.buyer: Manage your Ad Exchange buyer account configuration

